# pytemplate

./: CHANGELOG.md  README.md  module.yml  pyproject.toml  tasks.py
.github/actions/cpenv-publish/: action.yml
.github/workflows/: shotgrid.yml  test.yml
hooks/: hooks.md
pytemplate/: example.py
src/pytemplate/tests/: test_example.py
